@startuml Buy Account - Class Diagram
!define ENTITY_COLOR #E8F5E9

skinparam backgroundColor #FAFAFA
skinparam linetype ortho
skinparam nodesep 120
skinparam ranksep 120
skinparam padding 15
skinparam classBackgroundColor ENTITY_COLOR
skinparam classBorderColor #81C784
skinparam arrowThickness 1.5

' Title
title Buy Account (Make Order → Make Payment) - Class Diagram\nEntity Level - Relationships Focus

' =============== ENTITIES ===============

class User <<Entity>> {
}

class Product <<Entity>> {
}

class ProductVariant <<Entity>> {
}

class ProductVariantAccount <<Entity>> {
}

class Orders <<Entity>> {
}

class Transaction <<Entity>> {
}

' =============== LAYOUT HINTS (Hidden) ===============

User -[hidden]right- Product
Product -[hidden]down- ProductVariant
ProductVariant -[hidden]down- ProductVariantAccount
User -[hidden]down- Orders
Orders -[hidden]right- Transaction

' =============== PRODUCT HIERARCHY (Composition) ===============

Product "1" *-down-> "0..*" ProductVariant : <<has>>

ProductVariant "1" *-down-> "0..*" ProductVariantAccount : <<has>>

' =============== USER RELATIONSHIPS ===============

User "1" -right-> "0..*" Product : <<seller>>

User "1" ..> "0..*" Orders : <<customer>>

' =============== ORDER & PAYMENT RELATIONSHIPS ===============

Orders "0..1" -right-> "0..1" Transaction : <<payment>>

' =============== TRANSACTION RELATIONSHIPS ===============

Transaction "1" .up.> "1" User : <<customer>>

Transaction "1" .up.> "1" User : <<seller>>

Transaction "1" ..> "1" Product : <<purchased>>

Transaction "1" ..> "1" ProductVariant : <<variant>>

ProductVariantAccount "0..*" .left.> "0..1" Transaction : <<sold in>>

' =============== LEGEND ===============

legend bottom
  **Relationship Types:**
  | Symbol | Meaning |
  | ━━━━━▶ | Association (solid) |
  | ━━◆━━▶ | Composition (solid with diamond) |
  | ┄┄┄┄┄▶ | Dependency (dotted) |

  **Purchase Flow:**
  1. Customer (User) creates Orders
  2. Orders processed → Transaction created
  3. Transaction links Customer + Seller + Product + Variant
  4. ProductVariantAccount allocated to Transaction
end legend

@enduml

